--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -21,7 +21,7 @@ jobs:
     - name: remove
       run: rm -rf ./vendor 
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
