--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,8 +17,7 @@ jobs:
         php-version: '8.0'
     - uses: actions/checkout@v4
     - name: create project
-      run: composer create-project laravel/laravel test
-    - name: Copy .env
+      run: php composer create-project laravel/laravel test
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
